--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 </head>
 <body>
     <header>
-        <h1>Great Cliff's Logo</h1>
+        <img src="images/logo.png" alt="Great Cliffs Logo" width="150" height="auto">
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#cliffs">Cliffs</a></li>
-                <li><a href="#events">Events</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="activities.html">Activities</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -38,21 +37,19 @@
         <section id="partners">
             <h3>Partners</h3>
             <ul>
-                <li>Partner 1 Image</li>
-                <li>Partner 2 Image</li>
-                <li>Partner 3 Image</li>
-                <li>Partner 4 Image</li>
-                <li>Partner 5 Image</li>
-                <li>Partner 6 Image</li>
+                <li><img src="images/partner1.png" alt="Partner 1" width="100"></li>
+                <li><img src="images/partner2.png" alt="Partner 2" width="100"></li>
+                <li><img src="images/partner3.png" alt="Partner 3" width="100"></li>
+                <li><img src="images/partner4.png" alt="Partner 4" width="100"></li>
             </ul>
         </section>
     </main>
     <footer>
         <p>&copy; Copyright 2020 :: GreatCliffs.com</p>
         <p>
-            <a href="#facebook">Facebook Image</a> |
-            <a href="#instagram">Instagram Image</a> |
-            <a href="#twitter">Twitter Image</a>
+            <a href="#facebook">Facebook</a> |
+            <a href="#instagram">Instagram</a> |
+            <a href="#twitter">Twitter</a>
         </p>
         <p>
             This website is designed and created solely for educational purposes only at Westcliff University.
